Try to get surefire working on Java 9